# link-shortener

./: .dockerignore  Dockerfile  README.md  docker-compose.postgres.yml  docker-compose.redis.yml  pyproject.toml
src/link_shortener/: __init__.py  config.py  log_config.py  main.py
src/link_shortener/api/: deps.py  routes.py  schemas.py
src/link_shortener/services/: shortener.py
src/link_shortener/storage/: base.py  factory.py  postgres.py  redis.py
tests/: conftest.py  test_app.py  test_config.py  test_docker.py  test_logging.py
tests/api/: test_redirect.py  test_shorten.py
tests/storage/: conftest.py  memory.py  test_conformance.py  test_factory.py  test_postgres_storage.py  test_redis_storage.py
