[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "link-shortener"
version = "0.1.0"
description = "Async URL shortener API with pluggable storage backends"
authors = [
    { name="Artem Mitn", email="mitay93@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.31.0",
    "fastapi==0.136.3",
    "pydantic-settings==2.14.1",
    "redis==8.0.0",
    "uvicorn[standard]==0.49.0",
]

[project.optional-dependencies]
dev = [
    "fakeredis==2.36.0",
    "httpx==0.28.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "pyyaml==6.0.2",
]

[project.scripts]
link-shortener = "link_shortener.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/link_shortener"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["error"]
